force-app/main/default/objects/Rate__c/fields/Care_Supervision__c.field-meta.xml
<CustomField>
    <fullName>Care_Supervision__c</fullName>
    <label>Care &amp; Supervision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>