force-app/main/default/objects/Rate__c/fields/Child_support_has_been_notified__c.field-meta.xml
<CustomField>
    <fullName>Child_support_has_been_notified__c</fullName>
    <label>Child support has been notified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>