force-app/main/default/objects/Rate__c/fields/Clinical__c.field-meta.xml
<CustomField>
    <fullName>Clinical__c</fullName>
    <label>Clinical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>