force-app/main/default/objects/Rate__c/fields/Contract_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date_Range__c</fullName>
    <label>Contract Date Range</label>
    <length>100</length>
    <type>Text</type>
</CustomField>