force-app/main/default/objects/Rate__c/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <label>Contract Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>