force-app/main/default/objects/Rate__c/fields/Educational__c.field-meta.xml
<CustomField>
    <fullName>Educational__c</fullName>
    <label>Educational</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>