force-app/main/default/objects/Rate__c/fields/Family_Support_Services__c.field-meta.xml
<CustomField>
    <fullName>Family_Support_Services__c</fullName>
    <label>Family Support Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>