force-app/main/default/objects/Rate__c/fields/Intensity_Category__c.field-meta.xml
<CustomField>
    <fullName>Intensity_Category__c</fullName>
    <label>Intensity Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care &amp; Supervision</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Health &amp; Medical</fullName>
            </value>
            <value>
                <fullName>Family Support Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>