force-app/main/default/objects/Rate__c/fields/Intensity_Level__c.field-meta.xml
<CustomField>
    <fullName>Intensity_Level__c</fullName>
    <label>Intensity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>