force-app/main/default/objects/Rate__c/fields/Mail_Code__c.field-meta.xml
<CustomField>
    <fullName>Mail_Code__c</fullName>
    <label>Mail Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>