force-app/main/default/objects/Rate__c/fields/MD_CHESSIS_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>MD_CHESSIS_Provider_Id__c</fullName>
    <label>Provider Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>