force-app/main/default/objects/Rate__c/fields/Negotiated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_Amount__c</fullName>
    <label>Negotiated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>