force-app/main/default/objects/Rate__c/fields/Negotiated_Date__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_Date__c</fullName>
    <label>Negotiated Date</label>
    <type>Date</type>
</CustomField>