force-app/main/default/objects/Rate__c/fields/Per_Diem_Rate__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem_Rate__c</fullName>
    <label>Per Diem Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>