force-app/main/default/objects/Rate__c/fields/Permanency_Plan__c.field-meta.xml
<CustomField>
    <fullName>Permanency_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permanency Plan</label>
    <referenceTo>Permanency_Plan__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <type>Lookup</type>
</CustomField>