force-app/main/default/objects/Rate__c/fields/Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Id__c</fullName>
    <formula>VALUE(Provider__r.Casevault_ProID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Id</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>