force-app/main/default/objects/Rate__c/fields/Rate_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_Approval_Date__c</fullName>
    <label>Rate Approval Date</label>
    <type>Date</type>
</CustomField>