force-app/main/default/objects/Rate__c/fields/Rate_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_End_Date__c</fullName>
    <label>Rate End Date</label>
    <type>Date</type>
</CustomField>