force-app/main/default/objects/Rate__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Assistance</fullName>
                <default>true</default>
                <label>Monthly Assistance</label>
            </value>
            <value>
                <fullName>Actual</fullName>
                <isActive>false</isActive>
                <label>Actual</label>
            </value>
            <value>
                <fullName>Maximum</fullName>
                <isActive>false</isActive>
                <label>Maximum</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>