force-app/main/default/objects/Rate__c/fields/Transcation_Date__c.field-meta.xml
<CustomField>
    <fullName>Transcation_Date__c</fullName>
    <label>Transcation Date</label>
    <type>Date</type>
</CustomField>